Fix amp setup nav z-index

--- a/assets/src/setup/components/nav/style.css
+++ b/assets/src/setup/components/nav/style.css
@@ -10,6 +10,7 @@
 	left: 0;
 	position: fixed;
 	right: 0;
+	z-index: 2;
 }
 
 .amp-setup-nav__inner {
